@@ -59,9 +59,10 @@
 <div class="repository">
         <h2>{{ repo.url }}</h2>
         <table>
-        <tr><td>Last known commit</td><td>{{ repo.last_commit }}</td></tr>
-        <tr><td>Test report commit</td><td>{{ repo.last_test_report.commit }}</td></tr>
+        <!--<tr><td>Last known commit</td><td>{{ repo.last_commit }}</td></tr>-->
+        <tr><td>Commit</td><td>{{ repo.last_test_report.commit }}</td></tr>
         <tr><td>Last run</td><td>{{ repo.last_test_report.creation_date|date_diff }}</td></tr>
+        <tr><td>Author</td><td>{{ repo.last_test_report.author }}</td></tr>
         <tr><td>Status</td><td>{% if repo.last_test_report.fail %}Fail{% else %}Pass{% endif%}</td></tr>
         </table>
         
